Adicionar bootstrap icons
Co-authored-by: Everton-Leon <evertonleon07@gmail.com>

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,9 @@
 @import 'variables';
 
 // Bootstrap
+$primary: #dc3545;
 @import 'bootstrap/scss/bootstrap';
+@import 'bootstrap-icons/font/bootstrap-icons.css';
 
 
 .fade-out {
