fix: consertar operações do crud aluno

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,7 @@
 
 // Bootstrap
 $primary: #dc3545;
+$danger: #c70303;
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 
